--- a/_pages/team.html
+++ b/_pages/team.html
@@ -17,7 +17,7 @@ author_profile: true
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-	<li><strong>  Kailun Bai</strong>, 2020.09 – Present<br>	
+	<li><strong>  Kailun Bai</strong> 2020.09 – Present<br>	
 	 <!--	Internship:  <br>  -->
   Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
   Award 2: (2022.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
@@ -26,7 +26,7 @@ author_profile: true
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	
-	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+	<li><strong>  Yushan Hu</strong> 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
 Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
   <!-- Award2: (2022.07-2022.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
@@ -37,9 +37,9 @@ Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font
 
 	<li><strong>  Chang Bi</strong> (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC),  2021.09 – Present<br>
   </li>	
-	<li><strong>  Zhaoze Liu</strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	  </li>
 	
-	<li><strong>  Yupeng Zhao </strong>,  2022.09 – Present<br>	  </li>
+	<li><strong>  Yupeng Zhao </strong>  2022.09 – Present<br>	  </li>
 
 	
 
@@ -63,23 +63,23 @@ Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font
 <h4>Master Students</h4>
 
 <ul>
-	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	
+	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2020.09 – Present<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>	
-	<li><strong>  Yichen Yan</strong>, 2020.09 – Present<br>	  </li>	
+	<li><strong>  Yichen Yan</strong> 2020.09 – Present<br>	  </li>	
   Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	 
 	Award: (2021.09-2022.04) Biotalent SWPP <br>
 	</li>	
 	
-	<li><strong>  Haochen Ning</strong>,  2021.09 – Present<br>	  </li>
-<!--	<li><strong>  Hadi Roopeai</strong>,  2021.09 – Present<br>	  </li> -->
-	<li><strong>  Jinglan Qiu </strong>,  2021.09 – Present<br>	  </li>
+	<li><strong>  Haochen Ning</strong>  2021.09 – Present<br>	  </li>
+<!--	<li><strong>  Hadi Roopeai</strong>  2022.09 – Present<br>	  </li> -->
+	<li><strong>  Jinglan Qiu </strong>  2021.09 – Present<br>	  </li>
 </ul>
 
 <h4>Long-term Visitors</h4>
@@ -95,7 +95,7 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 <h4>Undergraduate Students</h4>
 
 <ul>
-	<li><strong>  Danielle Tsao (UVic) </strong> , 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+	<li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
 Award 2: (2021.09-2022.04) Biotalent SWPP <br>
 Award 3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>		
@@ -104,21 +104,21 @@ Award 3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Aman Monga (UVic) </strong> , Full-time internship, 2022.05 – 2022.12<br>   </li>
+	<li><strong>  Aman Monga (UVic) </strong> Full-time internship, 2022.05 – 2022.12<br>   </li>
 
-	<li><strong>  Shanshan Xue (UVic) </strong> , Summer internship, 2022.05 – 2022.08<br>   </li>	
+	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 
-	<li><strong>  Xuhui Wang (UVic) </strong> , Summer internship, 2022.05 – 2022.08<br>   </li>	
+	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 	
-	<li><strong>  Blake Smith (UVic) </strong> , Summer internship, 2022.05 – 2022.09<br>   </li>
+	<li><strong>  Blake Smith (UVic) </strong> Summer internship, 2022.05 – 2022.09<br>   </li>
 
-	<li><strong>  Sen Mu (Tongji University) </strong> , 2022.05 – 2022.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2022.05-2022.08) MITACS Globalink Research Internship <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Liuyi Lan (Beijing Normal University) </strong> , 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+	<li><strong>  Liuyi Lan (Beijing Normal University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -132,7 +132,7 @@ Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br>
 <h4>Postdoctorate Fellows and Research Associates</h4>
 
 <ul>
-  <li><strong><a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html"> Omar Alaqeeli</a></strong>, 2018.10 – 2019.12<br>
+  <li><strong><a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html"> Omar Alaqeeli</a></strong> 2018.10 – 2019.12<br>
     <!--Assistant Professor, <a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html">University of Texas at Arlington</a>, USA -->
 First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li>
 
@@ -144,7 +144,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
-	<li><strong>  Xiaolin Huang</strong>,  2022.06<br>	  
+	<li><strong>  Xiaolin Huang</strong> 2022.06<br>	  
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver	
 	</li>
 	
@@ -159,7 +159,7 @@ Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics,
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Yuying Huang</strong> , 2021.08 <br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
+	<li><strong>  Yuying Huang</strong> 2021.08 <br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
 Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
 Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
@@ -170,7 +170,7 @@ First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-s
 
 
 	
-  <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.4<br>
+  <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) 2021.4<br>
  <!--	Internship:  <br>  -->
 	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>
 	 Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
@@ -181,14 +181,14 @@ First job: International Rice Research Institute  <br>
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 	
- <li><strong>Qincheng Lu</strong>, 2020.08<br>
+ <li><strong>Qincheng Lu</strong> 2020.08<br>
  <!--	Internship:  <br>  -->
  	Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship  <br> <!-- <font color="blue"> $15,000 </font> <br> -->
  <!--   Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> -->  
     First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
- <li><strong>Ailan Shi</strong> , 2019.06 <br>
+ <li><strong>Ailan Shi</strong> 2019.06 <br>
 	Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.09-2019.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen
@@ -198,7 +198,7 @@ First job: International Rice Research Institute  <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-  <li><strong>Peijie Xie</strong>, 2019.05 <br>
+  <li><strong>Peijie Xie</strong> 2019.05 <br>
 	Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
 	Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
 	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver  <br> 
@@ -215,20 +215,20 @@ First job: International Rice Research Institute  <br>
 
 	<h4>Undergraduate Students</h4>
 <ul>
-		<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+		<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-	<li><strong>  Haijun Jia (Beihang University)</strong> , 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+	<li><strong>  Haijun Jia (Beihang University)</strong> 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>   
-	<li><strong>Yitao Lu (University of Science and Technology of China)</strong>, Summer internship, 2019.07 – 2019.10 <br>  
+	<li><strong>Yitao Lu (University of Science and Technology of China)</strong> Summer internship, 2019.07 – 2019.10 <br>  
 	   First job: PhD Student, School of Data Science,  <a href="https://scholars.cityu.edu.hk/en/persons/yitao-lu(2f2c7c44-8355-42e7-9de8-bf57068104e0).html"> City University of HongKong</a>, China  <br>
 </li>
-  <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong>, Summer internship, 2019.07 – 2019.10 <br>  
+  <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong> Summer internship, 2019.07 – 2019.10 <br>  
 	   First job: PhD student, <a href="https://www.uvic.ca/science/math-statistics/"> University of Victoria </a>, Canada  <br>
 </li>
 
