--- a/_pages/team.html
+++ b/_pages/team.html
@@ -144,26 +144,28 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
-	<li><strong>  Xiaolin Huang</strong> 2022.06<br>	  
+	<li><strong>  Xiaolin Huang</strong> 2022.06<br>
+        Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
+ <!--	Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver	
 	</li>
 	
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
  <!--	Internship:  <br>  -->
+Thesis: <em>Learning COVID-19 network from literature databases using core decomposition</em> <br>
 Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
-Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br>
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+<!-- Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
    First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
 	<li><strong>  Yuying Huang</strong> 2021.08 <br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
+Thesis: <em> Novel Modelling of High-frequency Stock Trading Data</em> <br>
 Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
 Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
 First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-science/"> University of Waterloo </a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
@@ -171,43 +173,39 @@ First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-s
 
 	
   <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) 2021.4<br>
- <!--	Internship:  <br>  -->
-	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>
-	 Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
-	 Internship: (2020.01-2020.06) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
-	 Award 2: (2020.07-2020.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+<!--	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>-->
+Thesis: <em>Multi-SNP prediction model for lung function decline</em> <br> 
+Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
+Internship: (2020.01-2020.06) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
+Award 2: (2020.07-2020.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 First job: International Rice Research Institute  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 	
  <li><strong>Qincheng Lu</strong> 2020.08<br>
  <!--	Internship:  <br>  -->
- 	Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship  <br> <!-- <font color="blue"> $15,000 </font> <br> -->
- <!--   Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> -->  
-    First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
+Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship  <br> <!-- <font color="blue"> $15,000 </font> <br> -->
+Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> 
+First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
  <li><strong>Ailan Shi</strong> 2019.06 <br>
-	Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
+MSc Degree Project: <em>Aggregating Multiple Genomic Studies Using Ensemble Data Analysis</em>
+Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.09-2019.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen
  <br>
 	<!-- (Co-supervisor <a href="http://www.providenceresearch.ca/researcher/don-sin"> Dr. Don Sin </a> and Dr. Maen Obeidat, University of British Columbia) -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
   <li><strong>Peijie Xie</strong> 2019.05 <br>
-	Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
-	Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
-	First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver  <br> 
-	Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
-
- <!--	Award 2: Trainee Award 2018.9-2019.9  <span class="pink">($19,000)</span> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+MSc Degree Project:: <em>An R package for Multi-Task Prediction</em> <br> 	
+Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
+Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
+First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver  <br> 
+Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
   </li>
 
 	
