--- a/_pages/team.html
+++ b/_pages/team.html
@@ -201,7 +201,7 @@ Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Hear
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
   <li><strong>Peijie Xie</strong> 2019.05 <br>
-MSc Degree Project:: <em>An R package for Multi-Task Prediction</em> <br> 	
+MSc Degree Project: <em>An R package for Multi-Task Prediction</em> <br> 	
 Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
 Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
 First job: <a href="https://www.ea.com/"> Electronic Arts Inc. </a> , Vancouver  <br> 
