--- a/_pages/team.html
+++ b/_pages/team.html
@@ -21,7 +21,7 @@ author_profile: true
 	 <!--	Internship:  <br>  -->
   Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
   Award 2: (2022.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
-		<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
@@ -29,10 +29,10 @@ author_profile: true
 	<li><strong>  Yushan Hu</strong> 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
 Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
-  <!-- Award2: (2022.07-2022.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
-  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+<!-- Award2: (2022.07-2022.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+<!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+<!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
 	<li><strong>  Chang Bi</strong> (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC),  2021.09 – Present<br>
@@ -147,7 +147,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	<li><strong>  Xiaolin Huang</strong> 2022.06<br>
         Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
  <!--	Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
-	Firest job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver	
+	Firest job: <a href="https://www.amazon.ca/"> Amazon </a>, Vancouver	
 	</li>
 	
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
@@ -157,7 +157,7 @@ Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font
 Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
 <!-- Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
-   First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, Canada  <br> 
+First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
@@ -185,7 +185,7 @@ First job: International Rice Research Institute  <br>
  <li><strong>Qincheng Lu</strong> 2020.08<br>
  <!--	Internship:  <br>  -->
 Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship  <br> <!-- <font color="blue"> $15,000 </font> <br> -->
-Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> 
+Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> 
 First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
@@ -193,7 +193,7 @@ First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</
 MSc Degree Project: <em>Aggregating Multiple Genomic Studies Using Ensemble Data Analysis</em>
 Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.09-2019.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
-	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen
+	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen China
  <br>
 	<!-- (Co-supervisor <a href="http://www.providenceresearch.ca/researcher/don-sin"> Dr. Don Sin </a> and Dr. Maen Obeidat, University of British Columbia) -->
 
