--- a/_pages/team.html
+++ b/_pages/team.html
@@ -153,7 +153,8 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
  <!--	Internship:  <br>  -->
 Thesis: <em>Learning COVID-19 network from literature databases using core decomposition</em> <br>
-Award: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
+Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
+Award 1: (2020.07) VADA Student Research Presentation Award <br> <!-- <font color="blue"> $19,000 </font> <br> -->				
 Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
 <!-- Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
@@ -164,7 +165,8 @@ First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Sc
 	<li><strong>  Yuying Huang</strong> 2021.08 <br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
 Thesis: <em> Novel Modelling of High-frequency Stock Trading Data</em> <br>
 Work Study: (2019.09 - 2020.04) Centre for Biomedical Research, UVic  <br>
-Award: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
+Award 1: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <font color="blue"> $19,000 </font> <br> -->
+Award 2: (2021.07) VADA Student Research Presentation Award <br> <!-- <font color="blue"> $19,000 </font> <br> -->		
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-science/"> University of Waterloo </a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
