--- a/_pages/team.html
+++ b/_pages/team.html
@@ -192,7 +192,7 @@ First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
  <li><strong>Ailan Shi</strong> 2019.06 <br>
-MSc Degree Project: <em>Aggregating Multiple Genomic Studies Using Ensemble Data Analysis</em>
+MSc Degree Project: <em>Aggregating Multiple Genomic Studies Using Ensemble Data Analysis</em>   <br>
 Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.09-2019.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen China
