--- a/_pages/team.html
+++ b/_pages/team.html
@@ -82,10 +82,19 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 	<li><strong>  Jinglan Qiu </strong>  2021.09 – Present<br>	  </li>
 </ul>
 
+<h4>Postdoctorate Fellows and Research Associates</h4>
+
+<ul>
+  <li><strong> Elham Majd </strong> 2022.06 – current <br>
+  <!--First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li> -->
+
+
+</ul>
+
 <h4>Long-term Visitors</h4>
 <ul>
 	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
-	<li><strong>  Dr. Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – Present<br>	
+	<li><strong>  Dr. Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
 	<li><strong>  Yao Dong </strong> (Senior Technician, Hebei University of Technology, China， funded by CSC grant), 2021.12 – Present<br>						
 	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<br>	
 </ul>
@@ -106,11 +115,15 @@ Award 3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>
 
 	<li><strong>  Aman Monga (UVic) </strong> Full-time internship, 2022.05 – 2022.12<br>   </li>
 
+	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship, 2022.06 – 2022.08<br>   </li>
+
 	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 
 	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 	
 	<li><strong>  Blake Smith (UVic) </strong> Summer internship, 2022.05 – 2022.09<br>   </li>
+		
+	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06 – 2022.08 <br>   </li>
 
 	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2022.05-2022.08) MITACS Globalink Research Internship <br>
