--- a/_pages/research.html
+++ b/_pages/research.html
@@ -17,7 +17,7 @@ Trainnees are underlined, last/corresponding authors denoted by *
 </li>
 
 	
-<li> Xing L, Zhang X, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. （<em>Canadian Journal of Statistics</em> 2021). <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link of Paper </a> </li>
+<li> Xing L, Zhang X, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. （<em>Canadian Journal of Statistics</em> 2021). <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link of Paper </a>,  <strong> Statistical Society of Canada 2022 CJS Award </strong></li>
   
 	
 <li> <u>Lu Y</u>, Zhou J, Xing L, Zhang X*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. (<em> Statistics in Medicine</em> 2021 ) <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
