--- a/_pages/research.html
+++ b/_pages/research.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <h2> Recently Published Papers (Selected) </h2>
-Trainnees are underlined, last/corresponding authors denoted by *
+Trainnees are underlined, last/corresponding authors denoted by *. Full list of publications can be found on my <a href="https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"> Google Scholar </a> page.
 
 <!--<h3>Published </h3> -->
 <ol>
