--- a/_pages/team.html
+++ b/_pages/team.html
@@ -62,24 +62,15 @@ Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font
 
 <h4>Master Students</h4>
 
-<ul>
-	<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2020.09 – Present<br>	
-Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
- <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>	
-	<li><strong>  Yichen Yan</strong> 2020.09 – Present<br>	  </li>	
-  Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
-Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
-	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	 
-	Award: (2021.09-2022.04) Biotalent SWPP <br>
-	</li>	
-	
+<ul>	
 	<li><strong>  Haochen Ning</strong>  2021.09 – Present<br>	  </li>
 <!--	<li><strong>  Hadi Roopeai</strong>  2022.09 – Present<br>	  </li> -->
 	<li><strong>  Jinglan Qiu </strong>  2021.09 – Present<br>	  </li>
+	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Longwen Shang</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Morgen Magee </strong>  2022.09 – Present<br>	  </li>
 </ul>
 
 <h4>Postdoctorate Fellows and Research Associates</h4>
@@ -162,7 +153,22 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
  <!--	Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a>, Vancouver	
 	</li>
-	
+
+		<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2020.09 – 2022.07<br>	
+Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
+ <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
+ <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>	
+	<li><strong>  Yichen Yan</strong> 2020.09 – 2022.08<br>	  </li>	
+  Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
+Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
+First job: PhD student, Simon Fraser University </a>, Canada  <br> 
+	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	 
+	Award: (2021.09-2022.08) Biotalent SWPP <br>
+	</li>	
+
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
  <!--	Internship:  <br>  -->
 Thesis: <em>Learning COVID-19 network from literature databases using core decomposition</em> <br>
