--- a/_pages/team.html
+++ b/_pages/team.html
@@ -98,7 +98,9 @@ Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font
 	<li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
 Award 2: (2021.09-2022.04) Biotalent SWPP <br>
-Award 3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>		
+Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
+Award 4: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>	
+Award 5: (2022.08) Jamie Cassels Undergraduate Research Awards <br>		
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
