--- a/_pages/team.html
+++ b/_pages/team.html
@@ -29,7 +29,7 @@ author_profile: true
 	<li><strong>  Yushan Hu</strong> 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
 Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
-<!-- Award2: (2022.07-2022.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
 <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -100,7 +100,9 @@ Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
 Award 2: (2021.09-2022.04) Biotalent SWPP <br>
 Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
 Award 4: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>	
-Award 5: (2022.08) Jamie Cassels Undergraduate Research Awards <br>		
+Award 5: (2022.08) Jamie Cassels Undergraduate Research Awards <br>	
+Award 6: (2022.10-2023.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+		
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
