--- a/_pages/team.html
+++ b/_pages/team.html
@@ -118,7 +118,7 @@ Award 6: (2022.10-2023.06) MATICS Accelerate Fellowship at <a href="https://www.
 	
 	<li><strong>  Blake Smith (UVic) </strong> Summer internship, 2022.05 – 2022.09<br>   </li>
 		
-	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06 – 2022.08 <br>   </li>
+	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06  <br>   </li>
 
 	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2022.05-2022.08) MITACS Globalink Research Internship <br>
