--- a/_pages/team.html
+++ b/_pages/team.html
@@ -101,7 +101,7 @@ Award 2: (2021.09-2022.04) Biotalent SWPP <br>
 Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
 Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>	
 Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
-Award 6: (2022.10-2023.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+Award 6: (2022.10-2023.06) MATICS Accelerate Fellowship <br>
 		
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
