--- a/_pages/team.html
+++ b/_pages/team.html
@@ -68,7 +68,7 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  Jinglan Qiu </strong>  2021.09 – Present<br>	  </li>
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Longwen Shang</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Longwen Shang</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.09 – Present<br>	  </li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Morgen Magee </strong>  2022.09 – Present<br>	  </li>
 </ul>
