--- a/_pages/team.html
+++ b/_pages/team.html
@@ -110,7 +110,7 @@ Award 6: (2022.10-2023.06) MATICS Accelerate Fellowship <br>
 
 	<li><strong>  Aman Monga (UVic) </strong> Full-time internship, 2022.05 – 2022.12<br>   </li>
 
-	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by the BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
+	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
 
 	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 
