--- a/_pages/team.html
+++ b/_pages/team.html
@@ -70,6 +70,8 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Longwen Shang</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.09 – Present<br>	  </li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Shaghayegh AhooeiNejad </strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Farbod Esmaeili</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Morgen Magee </strong>  2022.09 – Present<br>	  </li>
 </ul>
 
