--- a/_pages/team.html
+++ b/_pages/team.html
@@ -64,7 +64,7 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 
 <ul>	
 	<li><strong>  Haochen Ning</strong>  2021.09 – Present<br>	  </li>
-	<li><strong>  Jinglan Qiu </strong>  2021.09 – Present<br>	  </li>
+	<li><strong>  Jinglan Qiu </strong>  2021.09 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) 2021.4<br>	  </li> 
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Longwen Shang</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.09 – Present<br>	  </li>
