--- a/_pages/team.html
+++ b/_pages/team.html
@@ -233,7 +233,7 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
 	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 	<li><strong>  Blake Smith (UVic) </strong> Summer internship, 2022.05 – 2022.09<br>   </li>
-	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06  <br>   </li>
+<!--	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06  <br>   </li> -->
 	<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
