--- a/_pages/team.html
+++ b/_pages/team.html
@@ -101,28 +101,15 @@ Award 2: (2021.09-2022.04) Biotalent SWPP <br>
 Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
 Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>	
 Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
-Award 6: (2022.10-2023.06) MATICS Accelerate Fellowship <br>
-		
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
+ <!--   Honer Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-
+<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship, 2023.01 – 2023.08<br>   </li>
+<li><strong>  Markus Swoveland (UVic) </strong> Full-time internship, 2023.01 – 2023.08<br>   </li>	
 	<li><strong>  Aman Monga (UVic) </strong> Full-time internship, 2022.05 – 2022.12<br>   </li>
 
-	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
-
-	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.11<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2022.07-2022.11) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
-	<li><strong>  Liuyi Lan (Beijing Normal University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 
 	
 </ul>
@@ -230,6 +217,20 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 	<h4>Undergraduate Students</h4>
 <ul>
+
+	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
+
+	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.11<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2022.07-2022.11) MITACS Globalink Research Internship <br>
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	<li><strong>  Liuyi Lan (Beijing Normal University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br>
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ 	 </li>
 	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
 	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 	<li><strong>  Blake Smith (UVic) </strong> Summer internship, 2022.05 – 2022.09<br>   </li>
