--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -20,14 +20,15 @@ author_profile: true
         <li> Department offer about $5000/year TA salary for all graduate students. </li>
 	<li> Entrance scholarship is available for students selected by committee.</li> 
 	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. </li> 
-	<li> Research Assistant positions (supported by my research grants) are available for students range from $8,000 to $30,000 per year (effective Sept 2023). </li>
+	<li> Research Assistant positions (supported by my research grants) are available for students range from $8000 to $30000 per year (effective Sept 2023). </li>
 	<li> Outstanding students have opportunites to have "research" internship supported by MITACS. </li>
 	<li> My students are also encouraged to apply <a href="http://vada.cs.umanitoba.ca/admissions/application-form/"> VADA scholarship </a>. </li>
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.</li>
 <ol> <br>
 
 <h2>Intern students </h2> 
-I am hiring student interns, who has solid statistics knowledge, strong programming skills (R is prefered), and excellent scientific writing skills.  <br>	
+	
+<p> I am hiring student interns, who has solid statistics knowledge, strong programming skills (R is prefered), and excellent scientific writing skills.  <br>	
 	<!--
 <h2> Prospective graduate or senior undergraduae students who are Canadian and permenant residence should check the following funding resources provided by the Government of Canada’s Student Work Placement Program</h2> 
 <ol>	
