--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,6 +10,10 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 
 <!--<h3>Published </h3> -->
 <ol>
+
+<li> Zhang X, <u>Huang Y </u>, Xu K, Xing L. Novel Modelling Strategies for High-frequency Stock Trading Data. 2023，<em> Financial Innovation</em> (impact factor 6.793) <a href="https://doi.org/10.1186/s40854-022-00431-9"> Link of Paper </a> 
+</li>	
+
 <li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, Zhang X*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 13.994) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link of Paper </a> 
 </li>	
 	
