--- a/_pages/research.html
+++ b/_pages/research.html
@@ -11,28 +11,28 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 <!--<h3>Published </h3> -->
 <ol>
 
-<li> Zhang X, <u>Huang Y </u>, Xu K, Xing L. Novel Modelling Strategies for High-frequency Stock Trading Data. 2023，<em> Financial Innovation</em> (impact factor 6.793) <a href="https://doi.org/10.1186/s40854-022-00431-9"> Link of Paper </a> and <a href="https://github.com/ubcxzhang/Stock-Price-Prediction"> Link of GitHub code </a> 
+<li> Zhang X, <u>Huang Y </u>, Xu K, Xing L. Novel Modelling Strategies for High-frequency Stock Trading Data. 2023，<em> Financial Innovation</em> (impact factor 6.793) <a href="https://doi.org/10.1186/s40854-022-00431-9"> Link to Paper </a> and <a href="https://github.com/ubcxzhang/Stock-Price-Prediction"> GitHub code </a> 
 </li>	
 
-<li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, Zhang X*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 13.994) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link of Paper </a> 
+<li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, Zhang X*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 13.994) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link to Paper </a> 
 </li>	
 	
-<li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, Zhang X*. The impact of lockdown timing on COVID-19 transmission across US counties. 2021， <em> EClinicalMedicine</em> (a journal published by the Lancet, impact factor 17.033) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link of Paper </a> 
+<li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, Zhang X*. The impact of lockdown timing on COVID-19 transmission across US counties. 2021， <em> EClinicalMedicine</em> (a journal published by the Lancet, impact factor 17.033) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link to Paper </a> 
 </li>
 
 	
-<li> Xing L, Zhang X, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. 2021，<em>Canadian Journal of Statistics</em>  <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link of Paper </a>,  （<a href="https://ssc.ca/en/awards?field_award_year_value%5Bvalue%5D%5Byear%5D=&tid=1320"> <strong> Statistics Society of Canada 2022 CJS Award </strong> </a> ）</li>
+<li> Xing L, Zhang X, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. 2021，<em>Canadian Journal of Statistics</em>  <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link to Paper </a>,  （<a href="https://ssc.ca/en/awards?field_award_year_value%5Bvalue%5D%5Byear%5D=&tid=1320"> <strong> Statistics Society of Canada 2022 CJS Award </strong> </a> ）</li>
   
 	
-<li> <u>Lu Y</u>, Zhou J, Xing L, Zhang X*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link of Paper </a> and 
+<li> <u>Lu Y</u>, Zhou J, Xing L, Zhang X*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
 <em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
 <li>Xu K, Zheng X, Xing L, Zhang X. Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. 2020， <em>Journal of Financial Research</em> <!--<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543713"> SSRN manuscript </a>  or -->
-	<a href="https://doi.org/10.1111/jfir.12210"> Link of Paper </a> </li>
+	<a href="https://doi.org/10.1111/jfir.12210"> Link to Paper </a> </li>
      
-<li> Xing L, Lesperance ML, Zhang X*. Simultaneous prediction of multiple outcomes using revised stacking algorithms. 2020， <em>Bioinformatics</em> <a href="https://doi.org/10.1093/bioinformatics/btz531"> Link of Paper </a> and 
+<li> Xing L, Lesperance ML, Zhang X*. Simultaneous prediction of multiple outcomes using revised stacking algorithms. 2020， <em>Bioinformatics</em> <a href="https://doi.org/10.1093/bioinformatics/btz531"> Link to Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/MTPS/index.html"> Software package </a> </li>
 <!--	and <a href="https://github.com/ubcxzhang/MTPS"> GitHub </a> -->
 <!--<p><em> In many situations, we are interested in prediction of multiple outcomes. Compared with predicting each outcome individually, the prediction performance can be improved by simutanuously predicting all outcomes and allow predictions borrow information among different outcomes. There are many prediction methods developed for single outcome prediction, but most of them have/can not been extended into multi-outcome prediction version. Neural network is the major methods for multitask prediction problems. We proposed an novel algorithm that can construct complex multi-outcome prediction models using almost any single-outcome prediction methods as building blocks. Our novel algorithm is not only flexible, but also powerful. Using cross validation studies on data from HIV database, we show our method outperform multi-outcome neural network and other multi-task prediction methods in the literature.</em></p>
