--- a/_pages/team.html
+++ b/_pages/team.html
@@ -39,7 +39,7 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
   </li>	
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	  </li>
 	<li><strong>  Jinglan Qiu </strong>  2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) <br>	  </li> 
-	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li>
+<!--	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> -->
 
 	
 
@@ -86,7 +86,6 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
 	<li><strong>  Yao Dong </strong> (Senior Technician, Hebei University of Technology, China， funded by CSC grant), 2021.12 – Present<br>						
 	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<br>	
-	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
 </ul>
 
 
@@ -105,9 +104,8 @@ Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship, 2023.01 – 2023.08<br>   </li>
-<li><strong>  Markus Swoveland (UVic) </strong> Full-time internship, 2023.01 – 2023.08<br>   </li>	
-	<li><strong>  Aman Monga (UVic) </strong> Full-time internship, 2022.05 – 2022.12<br>   </li>
+<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>
+<li><strong>  Markus Swoveland (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>	
 
 
 	
@@ -214,9 +212,16 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 	
 </ul>
 
+
+<h4>Long-term Visitors</h4>
+<ul>
+	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
+</ul>
+
 	<h4>Undergraduate Students</h4>
 <ul>
 
+	<li><strong>  Aman Monga (UVic) </strong> Full-time internship @ CFIA, 2022.05 – 2022.12<br>   </li>
 	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
 
 	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.11<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
@@ -232,7 +237,7 @@ Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br>
  	 </li>
 	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
 	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
-	<li><strong>  Blake Smith (UVic) </strong> Summer internship, 2022.05 – 2022.09<br>   </li>
+	<li><strong>  Blake Smith (UVic) </strong> Summer internship @ CFIA, 2022.05 – 2022.09<br>   </li>
 <!--	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06  <br>   </li> -->
 	<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
